--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -44,7 +44,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./habitaciones.html">Habitaciones</a>
@@ -65,41 +65,94 @@
 
     <main>
         <section class="container actividadesEntorno">
-            <div class="row  text-center">
+            <div class="row text-center">
                 <div class="col-12 tituloActividades">
                     <h1>Actividades Recomendadas</h1>
                     <h5>Turismo Aventura</h5>
                     <p>Si la aventura está incluida en tu viaje consultá nuestra guía de proveedores de confianza para
                         que puedas rentar excursiones seguras e inolvidables.</p>
                 </div>
-                <div class="col-4 actividades">
+                <div class="col-lg-4 col-md-6 actividades">
                     <div class="card">
                         <img src="../Img/actividad-1.jpg" class="card-img-top" alt="montar">
                     </div>
                 </div>
-                <div class="col-4 actividades">
+                <div class="col-lg-4 col-md-6 actividades">
                     <div class="card">
                         <img src="../Img/actividad-2.jpg" class="card-img-top" alt="subirCerro">
                     </div>
                 </div>
-                <div class="col-4 actividades">
+                <div class="col-lg-4 col-md-6 actividades">
                     <div class="card">
                         <img src="../Img/actividad-3-1.webp" class="card-img-top" alt="remar">
                     </div>
                 </div>
-                <div class="col-4 actividades">
+                <div class="col-lg-4 col-md-6 actividades">
                     <div class="card">
                         <img src="../Img/actividad-4.jpg" class="card-img-top" alt="nadar">
                     </div>
                 </div>
-                <div class="col-4 actividades">
+                <div class="col-lg-4 col-md-6 actividades">
                     <div class="card">
                         <img src="../Img/actividad-5.jpg" class="card-img-top" alt="gastronomia">
                     </div>
                 </div>
-                <div class="col-4 actividades">
+                <div class="col-lg-4 col-md-6 actividades">
                     <div class="card">
-                        <img src="../Img/actividad-3-1.webp" class="card-img-top" alt="remar">
+                        <img src="../Img/actividad-6.jfif" class="card-img-top" alt="parapente">
+                    </div>
+                </div>
+                <div class="col-12 tituloActividades">
+                    <h1>Entorno</h1>
+                </div>
+                <div class="col-md-6 entorno">
+                    <div class="card">
+                        <img src="../Img/entorno-1.jpg" class="card-img-top" alt="entorno1">
+                    </div>
+                </div>
+                <div class="col-md-6 entorno">
+                    <div class="card">
+                        <img src="../Img/entorno-2.jpg" class="card-img-top" alt="entorno2">
+                    </div>
+                </div>
+                <div class="col-md-6 entorno">
+                    <div class="card">
+                        <img src="../Img/entorno-3.jpg" class="card-img-top" alt="entorno3">
+                    </div>
+                </div>
+                <div class="col-md-6 entorno">
+                    <div class="card">
+                        <img src="../Img/entorno-4.jpg" class="card-img-top" alt="entorno4">
+                    </div>
+                </div>
+                <div class="col-md-6 entorno">
+                    <div class="card">
+                        <img src="../Img/entorno-5.jpg" class="card-img-top" alt="entorno5">
+                    </div>
+                </div>
+                <div class="col-md-6 entorno">
+                    <div class="card">
+                        <img src="../Img/entorno-6.jpg" class="card-img-top" alt="entorno6">
+                    </div>
+                </div>
+                <div class="col-md-6 entorno">
+                    <div class="card">
+                        <img src="../Img/entorno-7.jpg" class="card-img-top" alt="entorno7">
+                    </div>
+                </div>
+                <div class="col-md-6 entorno">
+                    <div class="card">
+                        <img src="../Img/entorno-8.jpg" class="card-img-top" alt="entorno8">
+                    </div>
+                </div>
+                <div class="col-md-6 entorno">
+                    <div class="card">
+                        <img src="../Img/entorno-9.jpg" class="card-img-top" alt="entorno9">
+                    </div>
+                </div>
+                <div class="col-md-6 entorno">
+                    <div class="card">
+                        <img src="../Img/entorno-10.jpg" class="card-img-top" alt="entorno10">
                     </div>
                 </div>
             </div>
