--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./habitaciones.html">Habitaciones</a>
@@ -84,15 +84,15 @@
                         <input type="number" class="form-control" id="ingreseNumero"
                             placeholder="Ej:+54 (223)155-555555">
                     </div>
-                    <div class="col-6 col-sm-12">
+                    <div class="col-lg-6 col-sm-12">
                         <label for="Ciudad" class="form-label">Ciudad:</label>
                         <input type="text" class="form-control" id="ingreseCiudad" placeholder="Ej: Ciudad">
                     </div>
-                    <div class="col-3 col-sm-6">
+                    <div class="col-lg-3 cols-6">
                         <label for="Direccion" class="form-label">Dirección:</label>
                         <input type="text" class="form-control" id="ingreseDireccion" placeholder="Ej: Dirección">
                     </div>
-                    <div class="col-3 col-sm-6">
+                    <div class="col-lg-3 cols-6">
                         <label for="numeroDireccion" class="form-label">Numero:</label>
                         <input type="number" class="form-control" id="ingreseDireccion" placeholder="Ej: 12345">
                     </div>
