--- a/pages/tarifas.html
+++ b/pages/tarifas.html
@@ -37,7 +37,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"> <img src="../Iconos/logo_2.png" alt="logo moxy"></a>
-            <h1>MOXY</h1>
+            <h1>Moxy</h1>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./habitaciones.html">Habitaciones</a>
@@ -85,7 +85,7 @@
                     <h4><u>Bungalow familiar</u></h4>
                     <p>Precio de lista por noche $59.900 p/3 personas</p>
                     <p>Precio de lista por noche $69.900 p/4 personas</p>
-                    <a href="./habitaciones.html"><u>AMPLIAR INFO</u></a>
+                    <a href="./habitaciones.html#bunga"><u>AMPLIAR INFO</u></a>
                 </div>
             </article>
             <div class="ropa">
