entrega trabajo final

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="enlacesEscritorio">
         <div class="barraNavegacion">
             <a href="#">
                 <img src="./Iconos/logo_2.png" alt="logo Moxy">
