--- a/pages/tarifas.html
+++ b/pages/tarifas.html
@@ -65,7 +65,7 @@
     </nav>
 
     <main id="tarifasPromos">
-        <section>
+        <section class="seccionTarifas">
             <div class="tarifas">
                 <h2>TARIFAS</h2>
                 <p>Precios de lista mes en curso:</p>
@@ -108,7 +108,7 @@
                 </div>
             </article>
         </section>
-        <section>
+        <section class="seccionPromos">
             <div class="tituloPromo">
                 <h3><u>¡PROMOCIONES!</u></h3>
             </div>
@@ -126,11 +126,6 @@
                         Adiciona 10% de interes. Aplica sobre precio de lista mes en curso.
                     </p>
                 </div>
-
-                <div>
-                    <h4>MONEDAS DE PAGO ALTERNATIVAS</h4>
-                    <p>Peso Chileno,Reales,Dolares,Euros. Transferencia por PayPal o Binance</p>
-                </div>
                 <article class="aprovecha">
                     <h4>SI NO APROVECHAS ESTAS PROMOS ¡ESTAS PERDIENDO PLATA!</h4>
                 </article>
@@ -146,8 +141,6 @@
             </article>
         </section>
     </main>
-
-    <hr>
 
     <footer class="footer">
         <div class="footer__info">
